--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -46,10 +46,10 @@
 }
 .card {
   /* width: calc(33.3% - 1.6rem); */
-  /* width: calc(25% - 1.6rem); */
+  width: 25%;
   /* margin: 0.8rem; */
-  width: calc(26% - 1.6rem);
-  margin: 1%;
+  /* width: calc(26% - 1.6rem); */
+  margin-bottom: 1em;
   background: #fff;
   overflow: hidden;
   border-radius: .5rem;
