--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -59,6 +59,7 @@
 .show_right .show_price_ul .show_price_is,
 .show_right .show_price_ul .show_price_was,
 .show_right .show_price_ul .freeshipping,
+.show_right .show_price_ul .show_crowdfunding,
 .youtube ul li {
   display: inline-block;
   list-style: none;
