--- a/app/assets/stylesheets/dealzons.scss
+++ b/app/assets/stylesheets/dealzons.scss
@@ -143,6 +143,11 @@
  font-size: 1.1em;
  font-weight: bold;
 }
+.show_bold_source {
+ font-size: 1.1em;
+ font-weight: bold;
+ text-transform: uppercase;
+}
 .promo_code ul li:nth-child(2) {
   font-size: 0.8em;
   color: gray;
