--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -110,7 +110,8 @@
 @media screen and (max-width: 800px) {
   .card {
     display: flex;
-    width: calc(100% - 1.6rem);
+    /* width: calc(100% - 1.6rem); */
+    width: 100%;
     margin-bottom: 1em;
   }
 }
