--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -18,7 +18,7 @@
         <%= raw @blog.blog_ckeditor %>
       </div>
       
-      <%= link_to "Home", root_path %>
+      <%= link_to "Home", blogs_path %>
       <%= link_to "Edit", edit_blog_path(@blog) %>
       <%= link_to "Delete", blog_path(@blog), method: :delete, data: {confirm: "Are you sure?"} %>
       
