--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,9 @@
       <div class="show_detail_wrap">
         <div class="show_left">
           <img src="<%= @post.post_image %>">
-          <p><%= social_share_button_tag(@post.post_title) %></p>
+          <% if can? :update, @post %>
+           <p><%= social_share_button_tag(@post.post_title) %></p>
+          <% end %>
         </div>
 
         <div class="show_right">
