--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -1,3 +1,10 @@
+
+
+
+
+
+
+
 /* ---------------------------------------------
    Social share button
  --------------------------------------------- */
@@ -220,7 +227,7 @@ list-style: none;
   height: 4em;
   vertical-align: middle;
   border: 0;
-  object-fit: contain;
+  object-fit: cover;
 }
 .srtpl-r {
   margin-left: 90px;
