--- a/app/assets/stylesheets/dealzons.scss
+++ b/app/assets/stylesheets/dealzons.scss
@@ -91,7 +91,7 @@
 /* ~~~~~~~~~~~~~~~~~~ Quick Nave ~~~~~~~~~~~~~~~~~~ */
 .dealzon_nav {
   width: 100%;
-  background-color:#3b3b3b;
+  background-color: #3b3b3b;
 }
 .dealzon_nav ul {
   padding: 0em;
@@ -108,7 +108,7 @@
   padding:10px 15px;
  }
 .dealzon_nav a:hover {
-  background: #E65540;
+  background: #08f;
   color: #fff;
 }
 .dealzon_nav .menu-trigger {
