--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2191,7 +2191,8 @@ input, select, textarea {
     flex-shrink: 0;
     border-style: solid;
     border-width: 0 0 0 1px;
-    width: 33.3333333333%;
+    /*width: 33.3333333333%;*/
+    width: 30%;
   }
     .sidebar.alt {
       -moz-order: -1;
@@ -3625,7 +3626,8 @@ input, select, textarea {
       -ms-flex-shrink: 0;
       flex-shrink: 0;
       border-left: solid 1px rgba(144, 144, 144, 0.25);
-      width: 33.3333333333%;
+      /*width: 33.3333333333%;*/
+      width: 30%;
     }
     #footer .copyright {
       border-top: solid 1px rgba(144, 144, 144, 0.25);
